<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fullscreen_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    android:keepScreenOn="true"
    tools:context="com.auret.appwowweekend.ExperienciaActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        
	    <ImageView
	        android:id="@+id/title_content"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:contentDescription="@string/experiencia_content"
	        android:src="@drawable/cabecera_exp_noviembre"/>
	    
	    <TextView 
	        android:id="@+id/experience_title"
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:gravity="center"
	        android:textSize="50sp"
	        android:textColor="#fbe32f"
	        android:layout_marginTop="-75dp"
	        android:text="@string/expLasPalmas"/>
	    
	    <ImageView
	        android:id="@+id/experience"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/main_content"
	        android:gravity="center"
	        android:src="@drawable/fotos_exp_lp" />
	    
	</LinearLayout>
	
    <Button
		android:id="@+id/back_button"
		style="?android:attr/buttonBarButtonStyle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentLeft="true"
		android:layout_alignParentBottom="true"
		android:background="@null"
		android:drawableBottom="@drawable/boton_atras" />
    
    <TextView 
        android:id="@+id/experience_subtitle"
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal|top"
        android:text="@string/txt_premioDirecto"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textColor="#FFFFFF"/>
	  
    <Button
        android:id="@+id/button_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableBottom="@drawable/logo2"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
